<resources>
    <string name="app_name">Calculatip</string>
    <string name="action_settings">Settings</string>
    <string name="name_entry_hint">Participant Name</string>
    <string name="portion_entry_hint">Check Value</string>
    <string name="percent_other_entry_hint">Enter Other Percent Here</string>
    <string name="label_15_percent">15%</string>
    <string name="label_18_percent">18%</string>
    <string name="label_20_percent">20%</string>
    <string name="label_other_percent">Other</string>
    <string name="label_total">Total</string>
    <string name="label_tip">Tip</string>
    <string name="label_rounded_total">Rounded Total</string>
    <string name="label_rounded_tip">Rounded Tip</string>
    <string name="label_rounded_percent">Rounded Percentage</string>
    <string name="label_remaining">Remaining:</string>
    <string name="label_final_value">Final value:</string>
    <string name="default_report_value">0.0</string>
</resources>
